feat: add workload identity federation auth to gcp_pubsub destinations
